--- a/src/Kooco.Pikachu.Blazor/Pages/CashFlowReconciliationStatements/CashFlowReconciliationStatement.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/CashFlowReconciliationStatements/CashFlowReconciliationStatement.razor
@@ -13,6 +13,7 @@
 @inject IUiMessageService _uiMessageService;
 @inject IOrderAppService _orderAppService;
 @inject IJSRuntime JSRuntime;
+
 <LoadingIndicator @ref="loading" FullScreen FadeIn>
     <div class="row">
         <div class="col-3">
@@ -186,6 +187,10 @@
                         </div>
                     }
                 </DetailRowTemplate>
+                <FirstPageButtonTemplate>@L[PikachuResource.FirstPage]</FirstPageButtonTemplate>
+                <PreviousPageButtonTemplate>@L[PikachuResource.PrevPage]</PreviousPageButtonTemplate>
+                <NextPageButtonTemplate>@L[PikachuResource.NextPage]</NextPageButtonTemplate>
+                <LastPageButtonTemplate>@L[PikachuResource.LastPage]</LastPageButtonTemplate>
             </DataGrid>
         </CardBody>
     </Card>
