--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/GroupBuyReport.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/GroupBuyReport.razor
@@ -69,8 +69,11 @@
                     </DisplayTemplate>
                 </DataGridColumn>
             </DataGridColumns>
+            <FirstPageButtonTemplate>@L[PikachuResource.FirstPage]</FirstPageButtonTemplate>
+            <PreviousPageButtonTemplate>@L[PikachuResource.PrevPage]</PreviousPageButtonTemplate>
+            <NextPageButtonTemplate>@L[PikachuResource.NextPage]</NextPageButtonTemplate>
+            <LastPageButtonTemplate>@L[PikachuResource.LastPage]</LastPageButtonTemplate>
         </DataGrid>
-
     </CardBody>
 </Card>
 @code {
