--- a/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/EditItem.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/EditItem.razor
@@ -26,7 +26,7 @@
 
 <LoadingIndicator @ref="Loading" FullScreen></LoadingIndicator>
 <div>
-    <h3>@L["EditItem"]</h3>
+    <h3>@L[PikachuResource.EditItem]</h3>
 </div>
 <Card>
     <CardBody>
